# news-alert-system

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run_tests.py  setup.py  test_import.py
.github/workflows/: test-coverage.yml
adapters/: __init__.py  infra.py  repository_adapter.py  utils.py
app/core/: interfaces.py
app/core/article/: models.py  repositories.py  schemas.py  services.py
app/core/published/: models.py  repositories.py  schemas.py  services.py
app/core/queue/: models.py  repositories.py  schemas.py  services.py
app/crawler/: base.py  mbc.py  mbc_api.py  mbc_html.py  mbc_hybrid.py  registry.py
app/crawler/jtbc/: README.md  api.py
app/crawler/mbc/: README.md  api.py  html.py  hybrid.py
app/crawler/sbs/: README.md  api.py
app/crawler/utils/: headers.py  json_cleaner.py
app/crawler/ytn/: README.md  api.py
app/models/: article.py  published.py  queue.py
app/pipelines/: __init__.py
app/pipelines/discord_publisher/: __init__.py  client.py  config.py  formatters.py  service.py
app/publisher/discord/: README.md  bot.py  interfaces.py  services.py
app/schemas/: api_models.py  article.py
app/storage/: __init__.py
common/utils/: __init__.py  config.py  exceptions.py  logger.py
core/: __init__.py  exceptions.py  interfaces.py
core/article/: __init__.py  models.py  repositories.py  schemas.py  services.py
core/published/: __init__.py  models.py  repositories.py  schemas.py  services.py
core/queue/: __init__.py  models.py  repositories.py  schemas.py  services.py
db/: README.md  mongodb.py
db/repositories/: article_repository.py
docs/: README_UTILS.md  codebase-analysis.md  infra.md  refactoring-progress.md
infra/: __init__.py
infra/clients/: __init__.py  http.py  messaging.py
infra/database/: __init__.py  base.py  mongodb.py  repository.py
scripts/: async_crawling_explanation.md  check_sbs_html.py  crawl.py  generate_coverage.py  run_all.py  run_all_services.py  run_discord_publisher.py  save.py  test_published.py  test_queue.py  test_sbs_crawler_response.py
services/: __init__.py
services/crawler/: __init__.py  base.py  factory.py  registry.py
services/notifier/: __init__.py  base.py  discord.py  email.py  factory.py  slack.py
storage/: README.md  __init__.py
storage/published/: services.py
storage/queue/: __init__.py  interfaces.py  mongodb_queue.py  services.py
tests/: conftest.py  examples.py  helpers.py
tests/data/: sample_news_response.json
tests/functional/: test_crawler_workflow.py
tests/integration/: test_crawler_pipeline.py  test_infra_stack.py  test_sbs_crawler_integration.py  test_sbs_crawler_pipeline.py
tests/services/: conftest.py
tests/unit/: __init__.py  test_coverage_sample.py
tests/utils/: __init__.py  test_compatibility.py  test_exceptions.py
utils/: __init__.py  config.py  datetime_utils.py  exceptions.py  http.py  json_utils.py  logger.py  text_utils.py
(+67 files in other folders)
