[project]
name = "news-alert-system"
version = "0.1.0"
description = ""
authors = [
    {name = "zion"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "aiohttp[speedups] (>=3.11.16,<4.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
