[project]
name = "news-alert-system"
version = "0.1.0"
description = ""
authors = [
    {name = "zion"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "aiohttp[speedups] (>=3.11.16,<4.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "fake-useragent (>=2.1.0,<3.0.0)",
    "pydantic (>=2.11.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true